fix spacing

--- a/components/mainFoodPage/styles/rightSideBar.module.css
+++ b/components/mainFoodPage/styles/rightSideBar.module.css
@@ -54,8 +54,8 @@
   width: 50%;
   height: auto;
   object-fit: cover;
-  margin-top: -40px;
-  margin-bottom: -50px;
+  margin-top: -15%;
+  margin-bottom: -20%;
 }
 
 .titleName {
